# BusterX

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
busterx/: __main__.py  build_dataset.py  eval.py  util.py
busterx/datasetpp/: __init__.py  base.py  custom_benchmark.py  genbuster_200k.py  genbuster_bench.py  genbuster_bench_plusplus.py  genbuster_unified.py  mixin.py
busterx/registry/: __init__.py  registry.py
busterx/vl_utils/: extract_frames.py  vision_process.py
custom_benchmark/: README.md
plugins/: reward_func.py
prompts/: default_user_prompt.txt  default_user_prompt_image.txt
scripts/: eval_custom_benchmark.sh  eval_genbuster_bench.sh  eval_genbuster_bench_plusplus.sh  rollout.sh  train_dapo.sh  train_gspo.sh
